# seagrass

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: events.c  events.h  frontend.c  frontend.h  main.c  prog.c  prog.h  utils.c  utils.h
src/gui/: CMakeLists.txt  Makefile  button.c  button.h  fs.c  fs.h  node.c  node.h  scrollbar.c  scrollbar.h  text.c  text.h  textbox.c  textbox.h  tree.c  tree.h  utils.c  utils.h
src/gui/tree/: fs.c  fs.h  node.c  node.h  tree.c  tree.h
